# editorconfig-core-qt

./: .gitignore  CMakeLists.txt  EditorConfig  EditorConfig.cpp  EditorConfig.h  EditorConfig.pri  LICENSE  README.md
.github/workflows/: main.yml
src/: EditorConfig.pro
src/editorconfig-app/: editorconfig-app.pro  main.cpp
src/editorconfig-core-qt/: EditorConfig.cpp  editorconfig-core-qt.pro
